fix issue with spacing of images

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,8 @@
   display: flex;
   flex-direction: column;
   align-content: center;
+  justify-content: space-between;
+  min-height: 100vh;
   height: 100%;
   font-family: 'Helvetica-Neue', sans-serif;
 }
@@ -89,18 +91,11 @@
 }
 
 .gallery {
-  height: 100%;
-  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
   gap: 20px;
   margin: 20px auto 0;
   padding: 0 20px;
-
-  &__img {
-    max-width: 100%;
-    height: auto;
-  }
 }
 
 
@@ -204,5 +199,4 @@
   .gallery {
     grid-template-columns: repeat(3, 1fr);
   }
-  
 }
